--- a/index_honma_gensen_rnd.html
+++ b/index_honma_gensen_rnd.html
@@ -10,7 +10,7 @@
   	<script type="text/javascript" src="data_honma_all.js"></script>
     <script src='main_honma_gensen_rnd.js'></script>
     <script src='honma_info.js'></script>
-    <title>honma_gensen_rnd</title>
+    <title>2024 honma_gensen_rnd</title>
 </head>
 <body>
 </body>
